* [Choosers] Fixed an issue on choosers where the worklist toolbar icons were being resized too small.

--- a/features/cerberusweb.core/resources/css/cerb.css
+++ b/features/cerberusweb.core/resources/css/cerb.css
@@ -1810,7 +1810,6 @@ UL.ui-autocomplete.ui-menu li.ui-menu-item.ui-state-focus {
   background: linear-gradient(top, #eff9ff, white);
   border-color: #79b7e7;
   border-bottom: none;
-  z-index: 2;
 }
 
 .ui-tabs .ui-tabs-nav li.ui-tabs-active a {
