--- a/install/extras/developers/css/cerb.css/_jquery-ui.scss
+++ b/install/extras/developers/css/cerb.css/_jquery-ui.scss
@@ -102,7 +102,6 @@ UL.ui-autocomplete.ui-menu li.ui-menu-item.ui-state-focus {
 	@include linear-gradient(rgb(239,249,255), rgb(255,255,255));
 	border-color:rgb(121,183,231);
 	border-bottom:none;
-	z-index:2;
 }
 .ui-tabs .ui-tabs-nav li.ui-tabs-active a {
 	color: rgb(74,110,158);
